--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,45 +1,34 @@
 {
-    "env": {
+  "env": {
     "browser": true,
     "es2021": true,
     "jest": true
-    },
-    "extends": [
-    "plugin:react/recommended",
-    "airbnb",
+  },
+  "extends": [
+    "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "prettier",
     "plugin:prettier/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-    "ecmaFeatures": {
-    "jsx": true
-    },
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
     "ecmaVersion": 12,
     "sourceType": "module"
-    },
-    "plugins": [
-    "react",
-    "@typescript-eslint",
-    "eslint-plugin-import-helpers",
-    "prettier"
-    ],
-    "rules": {
+  },
+  "plugins": ["@typescript-eslint", "eslint-plugin-import-helpers", "prettier"],
+  "rules": {
     "camelcase": "off",
     "import/no-unresolved": "error",
     "@typescript-eslint/naming-convention": [
-    "error",
-    {
-    "selector": "interface",
-    "format": [
-    "PascalCase"
-    ],
-    "custom": {
-    "regex": "^I[A-Z]",
-    "match": true
-    }
-    }
+      "error",
+      {
+        "selector": "interface",
+        "format": ["PascalCase"],
+        "custom": {
+          "regex": "^I[A-Z]",
+          "match": true
+        }
+      }
     ],
     "class-methods-use-this": "off",
     "import/prefer-default-export": "off",
@@ -49,59 +38,29 @@
     "no-empty-function": "off",
     "lines-between-class-members": "off",
     "import/extensions": [
-    "error",
-    "ignorePackages",
-    {
-    "ts": "never",
-    "tsx": "never"
-    }
+      "error",
+      "ignorePackages",
+      {
+        "ts": "never"
+      }
     ],
     "import-helpers/order-imports": [
-    "warn",
-    {
-    "newlinesBetween": "always",
-    "groups": [
-    "module",
-    "/^@shared/",
-    [
-    "parent",
-    "sibling",
-    "index"
-    ]
-    ],
-    "alphabetize": {
-    "order": "asc",
-    "ignoreCase": true
-    }
-    }
+      "warn",
+      {
+        "newlinesBetween": "always",
+        "groups": ["module", "/^@shared/", ["parent", "sibling", "index"]],
+        "alphabetize": { "order": "asc", "ignoreCase": true }
+      }
     ],
     "import/no-extraneous-dependencies": [
-    "error",
-    {
-    "devDependencies": [
-    "**/*.spec.js"
+      "error",
+      { "devDependencies": ["**/*.spec.js"] }
     ]
-    }
-    ],
-    "prettier/prettier": "error",
-    "react/jsx-filename-extension": [
-    1,
-    {
-    "extensions": [
-    ".jsx",
-    ".tsx"
-    ]
-    }
-    ],
-    "react/react-in-jsx-scope": "off",
-    "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": [
-    "error"
-    ]
-    },
-    "settings": {
+  },
+  "settings": {
     "import/resolver": {
-    "typescript": {}
-    }
-    }
-    }
+      "typescript": {}
+    },
+    "prettier/prettier": "error"
+  }
+}
