--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
-  "name": "rentalx-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
-  "scripts": {
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
-  },
-  "dependencies": {
-    "express": "^4.18.1",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.14",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-import-helpers": "^1.2.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.0",
-    "prettier": "^2.7.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "*"
-  }
+    "name": "rentalx-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "license": "MIT",
+    "scripts": {
+        "commit": "git-cz",
+        "lint:fix": "yarn lint --fix",
+        "check-ts": "npx tsc --noEmit",
+        "lint": "eslint \"**/*.{ts,tsx}\"",
+        "first-install": "yarn install && husky install",
+        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    },
+    "dependencies": {
+        "express": "^4.18.1",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.1.2",
+        "@commitlint/config-conventional": "^17.1.0",
+        "@types/express": "^4.17.14",
+        "@types/uuid": "^8.3.4",
+        "@typescript-eslint/eslint-plugin": "^5.38.1",
+        "@typescript-eslint/parser": "^5.38.1",
+        "commitizen": "^4.2.5",
+        "cz-conventional-changelog": "3.3.0",
+        "eslint": "^8.24.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-import-resolver-typescript": "^3.5.1",
+        "eslint-plugin-import": "^2.26.0",
+        "eslint-plugin-import-helpers": "^1.2.1",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.1",
+        "prettier": "^2.7.1",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^4.8.4"
+    },
+    "config": {
+        "commitizen": {
+            "path": "./node_modules/cz-conventional-changelog"
+        }
+    }
 }
