--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
         "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
     },
     "dependencies": {
+        "csv-parse": "^5.3.0",
         "express": "^4.18.1",
+        "multer": "^1.4.5-lts.1",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^17.1.2",
         "@commitlint/config-conventional": "^17.1.0",
         "@types/express": "^4.17.14",
+        "@types/multer": "^1.4.7",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.38.1",
         "@typescript-eslint/parser": "^5.38.1",
